--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="container_layout  menu">
             <ul class="header_left list-unstyled d-flex align-items-center ">
               <li>
-                <a href="#" class="text-uppercase text-decoration-none header_link header_link--home">NeztWork</a>
+                <a href="index.html" class="text-uppercase text-decoration-none header_link header_link--home">NeztWork</a>
               </li>
               <li class="header_link_line">
                 <a href="#" class="text-decoration-none header_link header_link_line--hover">Danh mục</a>
