--- a/register.html
+++ b/register.html
@@ -57,24 +57,30 @@
             <div class="container">
                     <div class="row align-items-center">
                       <div class="col-12 col-md-12 col-lg-6 col-xl-6">
-                          <img src="https://neztwork.com/storage/frontendNew/assets/img/login.png" alt="" class="login-img">
+                          <img src="https://neztwork.com/storage/frontendNew/assets/img/register.png" alt="" class="login-img">
                           <!-- <img src="./assetsNeztWorkNew/img/login-removebg-preview.png" alt="" class="login-img"> -->
                       </div>
                       <div class="col-12 col-md-12 col-lg-6 col-xl-6 login_form_content mt-4 mt-lg-0">
-                          <h2 class="login_title">Tiếp tục hành trình phát triển của bạn</h2>
+                          <h2 class="login_title">Đăng ký để phát triển bản thân</h2>
                           <form action="" method="post">
                             <div class="mb-3">
-                                <input type="text" class="login_input" placeholder="Số điện thoại or Email" >
-                            </div> 
+                                <input type="text" class="login_input" placeholder="Họ tên ">
+                            </div>
+                            <div class="mb-3">
+                              <input type="text" class="login_input" placeholder="Số điện thoại" >
+                          </div>
+                          <div class="mb-3">
+                            <input type="text" class="login_input" placeholder="Email" >
+                        </div>
                             <div class="">
                                 <input type="password" class="login_input"  placeholder="Mật khẩu" >
                             </div>
                             <!-- <button type="submit" class="btn btn-primary mt-3">Login</button> -->
                              <div class="text-center">
-                              <button type="submit" class="form_auth--btn">Đăng nhập</button>
+                              <button type="submit" class="form_auth--btn">Đăng ký</button>
                              </div>
                              <div class="text-center">
-                              <p class="login_desc">Bạn chưa có tài khoản ? <a href="register.html">Đăng ký</a></p>
+                              <p class="login_desc">Bạn đã có tài khoản ? <a href="login.html">Đăng nhập</a></p>
                              </div>
                             </form>
                             <div class="login_form_content_bg"></div>
