--- a/creator.html
+++ b/creator.html
@@ -81,6 +81,22 @@
                 <div class="col-12 col-md-8 col-lg-9 creator_page_banner_item_content">
                           <p class="creator_page_banner--name">Nguyễn Thị Kiều Hảo</p>
                           <a href="#" class="creator_page_banner--job text-decoration-none">Nghề nghiệp, Kinh doanh & Khởi nghiệp</a>
+                          <div class="creator_page_content_header--mobile">
+                            <div class="creator_page_content_header d-flex align-items-center row">
+                              <div class="creator_page_content_header_item col-12 text-center text-md-start mt-3 mt-md-0 col-md-4">
+                                        <p class="creator_page_content_header_item--title">Người theo dõi</p>
+                                        <p class="creator_page_content_header_item--text">2,345</p>
+                                  </div>
+                                  <div class="creator_page_content_header_item col-12 text-center text-md-start mt-3 mt-md-0 col-md-4">
+                                    <p class="creator_page_content_header_item--title">Session thành công</p>
+                                    <p class="creator_page_content_header_item--text">23   </p>
+                              </div>
+                              <div class="creator_page_content_header_item col-12 text-center text-md-start mt-3 mt-md-0 col-md-4">
+                                <p class="creator_page_content_header_item--title">Đánh giá</p>
+                                <p class="creator_page_content_header_item--text">4.8</p>
+                          </div>
+                            </div>
+                          </div>
                       <div class="reator_page_banner_action--btn">
                           <a href="#" class="creator_page_banner--btn text-decoration-none">Theo dõi</a>
                           <a href="#" class="creator_page_banner--btn text-decoration-none">Nhắn tin</a>
@@ -100,6 +116,7 @@
     <div class="creator_page_content d_center">
       <div class="row creator_page--content container_layout ">
             <div class="col-12 col-lg-8">
+              <div class="creator_page_content_desktop">
                       <div class="creator_page_content_header d-flex align-items-center row">
                         <div class="creator_page_content_header_item col-12 text-center text-md-start mt-3 mt-md-0 col-md-4">
                                   <p class="creator_page_content_header_item--title">Người theo dõi</p>
@@ -113,6 +130,7 @@
                           <p class="creator_page_content_header_item--title">Đánh giá</p>
                           <p class="creator_page_content_header_item--text">4.8</p>
                     </div>
+                  </div>
                       </div>
                       <div class="creator_page_content_header_advise">
                             <div class="creator_page_content_header_advise_item">
