--- a/blog.html
+++ b/blog.html
@@ -64,17 +64,35 @@
 
   <!-- // content -->
   <div class="blog_page_warpper d_center">
-    <div class="blog_page container_layout">
-      <div class="row justify-content-center">
-        <div class="blog_page_search col-6">
+    <div class="blog_page ">
+      <!-- <div class="row justify-content-center">
+        <h1 class="banner_title banner_title--rgba" style="color: #45403F;"> Xin chào ! <br>
+          Bạn muốn đọc gì nào ? 
+        </h1>
+        <div class="blog_page_search col-10 col-md-6">
           <input class="blog_page_search--input " id="searchInputBlog" placeholder="Tìm bài viết ...">
           <button type="button" class="blog_page_search--btn"> <i
               class="fa-solid fa-magnifying-glass blog_page_search--icon"></i></button>
         </div>
+      </div> -->
+      <div class="banner d_center">
+        <div class="banner_content">
+          <h1 class="banner_title banner_title--rgba" style="color: #45403F;">
+            Xin chào <br>
+            Bạn muốn đọc gì ?
+          </h1>
+          <div class="banner_search">
+            <input type="text" class="banner_search--input" placeholder="T|" id="searchInputBlog" style="">
+            <i class="fa-solid fa-magnifying-glass banner_search--icon"></i>
+          </div>
+        </div>
       </div>
+
+
+      
       <div class="row blog_page_list">
         <div class="col-12 col-md-8 col-lg-9 blog_page_list_left row">
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item  col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
@@ -107,7 +125,7 @@
 
 
           </div>
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
@@ -140,7 +158,7 @@
 
 
           </div>
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
@@ -173,7 +191,7 @@
 
 
           </div>
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
@@ -206,7 +224,7 @@
 
 
           </div>
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
@@ -239,7 +257,7 @@
 
 
           </div>
-          <div class="blog_page_list_left_item col-12 col-md-6 col-lg-4 mt-3">
+          <div class="blog_page_list_left_item col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
                 <img
