--- a/blog.html
+++ b/blog.html
@@ -90,7 +90,7 @@
 
 
       
-      <div class="row blog_page_list">
+      <div class="row blog_page_list container_layout">
         <div class="col-12 col-md-8 col-lg-9 blog_page_list_left row">
           <div class="blog_page_list_left_item  col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
