--- a/detail_blogs.html
+++ b/detail_blogs.html
@@ -113,10 +113,10 @@
                         </div>
                       </a>
                         <div class="">
-                          <div class="d-flex align-items-center">
+                          <div class="d-flex-none d-md-flex align-items-center">
 
                             <a href="#" class="text-decoration-none detail_blogs_page_list_item_left_comment_list_item--name">Huỳnh Thái Bảo </a>
-                           <p class="detail_blogs_page_list_item_left_comment_list_item--date m-0 px-3">3 phút trước</p>
+                           <p class="detail_blogs_page_list_item_left_comment_list_item--date m-0 px-0 px-md-3">3 phút trước</p>
                           </div>
                             <p class="detail_blogs_page_list_item_left_comment_list_item--desc mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, eos veniam reprehenderit pariatur neque cum sunt repudiandae blanditiis eum illum aspernatur architecto. Qui incidunt, illo debitis omnis doloribus nisi neque.</p>
                         </div>
@@ -128,10 +128,10 @@
                         </div>
                       </a>
                         <div class="">
-                          <div class="d-flex align-items-center">
+                          <div class="d-flex-none d-md-flex align-items-center">
 
                             <a href="#" class="text-decoration-none detail_blogs_page_list_item_left_comment_list_item--name">Huỳnh Thái Bảo </a>
-                           <p class="detail_blogs_page_list_item_left_comment_list_item--date m-0 px-3">3 phút trước</p>
+                           <p class="detail_blogs_page_list_item_left_comment_list_item--date m-0 px-0 px-md-3">3 phút trước</p>
                           </div>
                             <p class="detail_blogs_page_list_item_left_comment_list_item--desc mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur, eos veniam reprehenderit pariatur neque cum sunt repudiandae blanditiis eum illum aspernatur architecto. Qui incidunt, illo debitis omnis doloribus nisi neque.</p>
                         </div>
