--- a/blog.html
+++ b/blog.html
@@ -89,9 +89,11 @@
       </div>
 
 
-      
-      <div class="row blog_page_list container_layout">
-        <div class="col-12 col-md-8 col-lg-9 blog_page_list_left row">
+      <div class="container_layout blog_page_list_wrapper">
+
+ 
+      <div class="row blog_page_list ">
+        <div class="col-12 col-md-12 col-lg-9 blog_page_list_left row">
           <div class="blog_page_list_left_item  col-12 col-sm-6 col-md-6 col-lg-4 mt-3">
             <a href="#" class="text-decoration-none">
               <div class="blog_page_list_left_item_image">
@@ -308,9 +310,9 @@
                 </li>
               </ul>
             </nav>
-          </div>
-        </div>
-        <div class="col-12 col-md-4 col-lg-3 mt-3 blog_page_list_right">
+          </div>  
+        </div>  
+        <div class="col-12 col-md-12 col-lg-3 mt-3 blog_page_list_right">
       <ul class="list-group">
         <a href="#" class="list-group-item d-flex justify-content-between align-items-center mb-2">
           Công nghệ thông tin
@@ -327,6 +329,7 @@
       </ul>
         </div>
       </div>
+    </div>
     </div>
   </div>
 
