--- a/about.html
+++ b/about.html
@@ -67,15 +67,18 @@
     </div>
 
 
-    <!-- // content -->
+    <!-- // content --> 
     <div class="about_page_wrapper">
-        <div class="about_page ">
+        <div class="about_page">  
             <div class="d_center">
             <div class="container_layout">
                 <div class="about_page_banner row">
                     <div class="about_page_banner_item_content col-12 col-lg-7">
                         <h2 class="about_page_banner_item_content--title text-center text-lg-start">Kết Nối Chuyên Gia,
                             Hiện Thực Hóa Ước Mơ</h2>
+                            <div class="about_page_banner_item_content--mobile--image">
+                                <img src="./assetsNeztWorkNew/img/about/mobile.svg" alt="" class="about_page_banner_item_content--mobile--img">
+                            </div>
                         <div class="about_page_banner_item_content_item">
                             <p class="about_page_banner_item_content--text">Chào mừng đến với Neztwork, nơi chúng tôi
                                 không chỉ dừng lại ở việc cung cấp những cuộc gọi video chia sẻ, tư vấn chuyên nghiệp.
@@ -181,31 +184,10 @@
                 </div>
             </div>
         </div>
-        <div class="d_center">
-            <div class="container_layout">
-                <div class="about_page_review">
-                        <div class="about_page_review_list row justify-content-center">
-                            <div class="col-12 col-lg-8 about_page_review_list_item  d-flex justify-content-center">
-                                <div class=" d-flex justify-content-center align-items-center flex-column">
-                                        <p class="about_page_review_list--desc text-center">Là một cá nhân thuộc cộng đồng LGBTQ+, Neztwork đã mang đến cho tôi cơ hội khám phá và hiểu rõ hơn về bản thân, thúc đẩy sự phát triển cá nhân. Cộng đồng ủng hộ và hướng dẫn từ các chuyên gia thực sự đã truyền sức mạnh và thay đổi cuộc sống của tôi.</p>
-                                        <div class="about_page_review_list_line">
-
-                                        </div>
-                                        <div class="about_page_review_list__info d-flex justify-content-center align-items-center flex-column">
-                                            <div class="about_page_review_list__info--image">
-                                                <img src="./assetsNeztWorkNew/img/review.png" alt="" class="about_page_review_list__info--img">
-                                            </div>
-                                            <p class="about_page_review_list--name">Ngô khánh vân</p>
-                                        </div>
-                                </div>
-                            </div>
-                        </div>
-                </div>
-            </div>
-        </div>
+  
         <div class="d_center">
             <div class="container_layout" style="padding: 0rem 2rem;">
-                <div class="about_page_job">
+                <div class="about_page_job" >
                     <div class="about_page_job_list row align-items-center justify-content-center">
                         <div class="about_page_job_list_item col-12 col-lg-8 ">
                             
@@ -237,7 +219,7 @@
         </div>
     </div>
 
-
+        
     <div class="footer_wrapper">
         <div class="footer_content d_center">
             <div class="footer_content_list container_layout">
