--- a/CSBM.html
+++ b/CSBM.html
@@ -75,7 +75,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/1.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Tìm hiểu cách chúng tôi lưu trữ dữ liệu và bảo đảm an toàn cho
+                <p class="csbm_page_content_item--text text-center text-lg-start">Tìm hiểu cách chúng tôi lưu trữ dữ liệu và bảo đảm an toàn cho
                   Neztwork.</p>
               </a>
             </div>
@@ -85,7 +85,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/2.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Cách Neztwork bảo vệ quyền riêng tư và tuân thủ luật pháp toàn cầu.</p>
+                <p class="csbm_page_content_item--text text-center text-lg-start">Cách Neztwork bảo vệ quyền riêng tư và tuân thủ luật pháp toàn cầu.</p>
               </a>
             </div>
             <div class="csbm_page_content_item ">
@@ -94,7 +94,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/3.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Các biện pháp giúp giữ an toàn cho người dùng của chúng tôi.</p>
+                <p class="csbm_page_content_item--text text-center text-lg-start">Các biện pháp giúp giữ an toàn cho người dùng của chúng tôi.</p>
               </a>
             </div>
             <div class="csbm_page_content_item ">
@@ -103,7 +103,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/4.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Điều khoản pháp lý và chính sách của Neztwork.</p>
+                <p class="csbm_page_content_item--text text-center text-lg-start">Điều khoản pháp lý và chính sách của Neztwork.</p>
               </a>
             </div>
             <div class="csbm_page_content_item ">
@@ -112,7 +112,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/5.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Thông tin về việc tuân thủ các quy định toàn cầu.</p>
+                <p class="csbm_page_content_item--text text-center text-lg-start">Thông tin về việc tuân thủ các quy định toàn cầu.</p>
               </a>
             </div>
             <div class="csbm_page_content_item ">
@@ -121,7 +121,7 @@
                   <img src="./assetsNeztWorkNew/img/CSBM/6.svg" alt=""  
                     class="csbm_page_content_item--img d-flex align-items-center justify-content-center">
                 </div>
-                <p class="csbm_page_content_item--text">Cam kết bảo vệ dữ liệu Creator và khách hàng minh bạch, rõ ràng, và tuyệt đối.</p>
+                <p class="csbm_page_content_item--text text-center text-lg-start">Cam kết bảo vệ dữ liệu Creator và khách hàng minh bạch, rõ ràng, và tuyệt đối.</p>
               </a>
             </div>
          
