--- a/about.html
+++ b/about.html
@@ -83,11 +83,11 @@
                             <p class="about_page_banner_item_content--text">Chào mừng đến với Neztwork, nơi chúng tôi
                                 không chỉ dừng lại ở việc cung cấp những cuộc gọi video chia sẻ, tư vấn chuyên nghiệp.
                             </p>
-                            <p class="about_page_banner_item_content--text mt-5">Sứ mệnh của chúng tôi là <span
+                            <p class="about_page_banner_item_content--text mt-4">Sứ mệnh của chúng tôi là <span
                                     class="about_page_banner_item_content--text_rgba">kết nối con người, tôn vinh giá
                                     trị</span> của mỗi cuộc giao tiếp, chia sẻ; phá vỡ những rào cản thường gặp (như địa
                                 điểm, thời gian, giá cả không minh bạch, và sự chênh lệch về địa vị xã hội). </p>
-                            <p class="about_page_banner_item_content--text mt-5">Tại Neztwork, chúng tôi tin rằng những
+                            <p class="about_page_banner_item_content--text mt-4">Tại Neztwork, chúng tôi tin rằng những
                                 kết nối chân thành sẽ tiếp sức và nâng cao hành trình của mỗi người, giúp họ tiến xa hơn
                                 trên con đường phát triển.</p>
                         </div>
@@ -148,14 +148,14 @@
                         <div class="about_page_commit_one">
                             <img src="./assetsNeztWorkNew/img/about/5.svg" alt="" class="about_page_commit_one--img">
                             <div class="about_page_commit_one_content row">
-                                <div class="col-12 col-lg-6">
+                                <div class="col-12 col-md-6 col-lg-6">
                                     <p class="about_page_commit_one_content--title">Neztwork Vì Cộng Đồng</p>
                                     <p class="about_page_commit_one_content--text">Chúng tôi luôn nỗ lực tạo ra những tác động tích cực thông qua các sáng kiến của Neztwork. Vì Cộng Đồng, tập trung vào sự hòa nhập, đa dạng và hỗ trợ cộng đồng.</p>
                                 </div>
                         </div>
                     </div>
                     <div class="about_page_commit_warpper_list row">
-                            <div class="col-12 col-lg-6 about_page_commit_two">
+                            <div class="col-12 col-md-6 col-lg-6 about_page_commit_two">
                                 <div class="about_page_commit--image">
                                     <img src="./assetsNeztWorkNew/img/about/6.svg" alt="" class="about_page_commit--img">
                                 </div>
@@ -166,7 +166,7 @@
                                 </div>
                                     </div>
                             </div>
-                            <div class="col-12 col-lg-6 about_page_commit_three">
+                            <div class="col-12 col-md-6 col-lg-6 about_page_commit_three">
                                 <div class="about_page_commit--image">
                                     <img src="./assetsNeztWorkNew/img/about/7.svg" alt="" class="about_page_commit--img">
                                 </div>
