--- a/social_impact.html
+++ b/social_impact.html
@@ -126,63 +126,63 @@
                             <div class="row justify-content-center">
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
                                             alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2 d-none d-md-block">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                             </div>
                             <div class="row justify-content-start justify-content-md-center">
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
-                                            alt="" class="social_impact_trust_list--img">
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
+                                        alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
                                 <div class="col-6 col-md-2 d-block d-md-none">
                                     <div class="circle">
-                                        <img src="https://media.istockphoto.com/id/1157887211/photo/secure-data-network-digital-cloud-computing-cyber-security-concept-earth-element-furnished-by.webp?a=1&b=1&s=612x612&w=0&k=20&c=wh7ZV_FmdkwuQN_ma9Z_Riifsrrtkfgbeg-vLxibQH4="
+                                        <img src="https://media.istockphoto.com/id/668288668/photo/green-leaves-background.webp?a=1&b=1&s=612x612&w=0&k=20&c=58t5sMN2FjmHiVxT7ceDSYWdoCVD17dR4kcOnuZHWDE="
                                             alt="" class="social_impact_trust_list--img">
                                     </div>
                                 </div>
@@ -191,7 +191,7 @@
 
                     </div>
                     <div class="social_impact_blog">
-                        <div class="row social_impact_blog_item">
+                        <div class="row social_impact_blog_item align-items-center justify-content-center lg-justify-content-start">
                             <div class="col-12 col-lg-8">
                                 <p class="about_page_we--title text-center text-start">Neztwork vì Cộng đồng</p>
 
@@ -201,17 +201,17 @@
                                     toàn cầu. Đây là minh chứng cho sức mạnh của hành động tập thể và những thay đổi lớn
                                     lao mà chúng ta có thể tạo ra khi cùng nhau nỗ lực.</p>
                             </div>
-                            <div class="col-12 col-lg-4">
+                            <div class="col-12 col-md-6 col-lg-4">
                                 <div class="social_impact_blog_item--image">
-                                    <img src="https://images.unsplash.com/photo-1719937206498-b31844530a96?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxfHx8ZW58MHx8fHx8"
+                                    <img src="./assetsNeztWorkNew/img/nz_team/2.svg"
                                         alt="" class="social_impact_blog_item--img">
                                 </div>
                             </div>
                         </div>
-                        <div class="row social_impact_blog_item_two">
-                            <div class="col-12 col-lg-4">
+                        <div class="row social_impact_blog_item_two align-items-center justify-content-center lg-justify-content-start">
+                            <div class="col-12 col-md-6 col-lg-4">
                                 <div class="social_impact_blog_item--image">
-                                    <img src="https://plus.unsplash.com/premium_photo-1728732954838-f1a7ec7fce46?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwyNHx8fGVufDB8fHx8fA%3D%3D"
+                                    <img src="./assetsNeztWorkNew/img/nz_team/2.svg"
                                         alt="" class="social_impact_blog_item--img">
                                 </div>
                             </div>
@@ -254,15 +254,15 @@
                                         Chung Tay</span> <br>
                                     Tạo Nên Sự Thay Đổi</p>
 
-                                <p class="social_impact--desc text-center mt-4"> Neztwork Cares thể hiện cam kết mạnh mẽ
+                                <p class="social_impact--desc text-center mt-4"> "Neztwork Cares thể hiện cam kết mạnh mẽ
                                     của chúng tôi đối với tác động xã hội. Thông qua việc mong muốn ghép đôi quyên góp
                                     và tạo ra nhiều cơ hội tình nguyện, chúng tôi trao quyền cho đội ngũ đóng góp ý
                                     nghĩa cho sứ mệnh toàn cầu. Đây là minh chứng cho sức mạnh của hành động tập thể và
-                                    những thay đổi lớn lao mà chúng ta có thể tạo ra khi cùng nhau nỗ lực.</p>
+                                    những thay đổi lớn lao mà chúng ta có thể tạo ra khi cùng nhau nỗ lực."</p>
                             </div>
                         </div>
                     </div>
-                    <div class="about_page_job mb-5" style="background-color: #FFDFD4BD;">
+                    <div class="about_page_job mb-5" style="background-color: #fff3e9;">
                         <div class="social_impact_join_list__new row align-items-center justify-content-center">
                             <div class="about_page_job_list_item col-12 col-lg-8 ">
                                     <!-- <p class="about_page_job_list--title text-center">  <span class="about_page_we--text">Khám phá</span> <br> Cơ hội hợp tác </p> -->
