--- a/chat.html
+++ b/chat.html
@@ -271,7 +271,7 @@
                           <div class="chat_page_list_item_right_header d-flex align-items-center">
                             <p class="chat_page_list_item_right_header--title mb-0">Directory</p>
                             <a href="#" class="ms-4">
-                              <img src="/assetsNeztWorkNew/img/chat/icon_button.svg" alt="">
+                              <img src="./assetsNeztWorkNew/img/chat/icon_button.svg" alt="">
                             </a>
                           </div>
                           <div class="chat_page_list_item_right_team_list">
